[package]
name = "my-page"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.45", features = ["serde"] }
console_error_panic_hook = "0.1.7"
gray_matter = "0.3.2"
js-sys = "0.3.103"
leptos = { version = "0.8.19", features = ["csr"] }
leptos-use = { version = "0.19.0", features = ["on_click_outside"] }
leptos_router = "0.8.13"
pulldown-cmark = "0.13.4"
rust-embed = { version = "8.11.0", features = ["include-exclude", "debug-embed"] }
serde = { version = "1.0.228", features = ["derive"] }
slug = "0.1.6"
wasm-bindgen = "0.2.126"
wasm-bindgen-futures = "0.4.76"
web-sys = { version = "0.3.102", features = ["DomRect", "IntersectionObserver", "IntersectionObserverEntry", "IntersectionObserverInit"] }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
# strip = true  # Automatically strip symbols from the binary.
codegen-units = 1
panic = "abort"
